src/zenoh_dart.h

/// Serializes the whole configuration to a JSON string.
///
/// Loans the config internally and wraps zc_config_to_string(), filling the
/// caller-allocated z_owned_string_t. The rc is checked (canon/cpp leaves it
/// unchecked).
///
/// ⛔ NOT detail-carrying, deliberately. It was wired to the deleted capture
/// and nothing ever read it. Promoting it to a detail-carrying entry would
/// widen the enrichment surface to a call whose input is the WHOLE RENDERED
/// CONFIG -- the value-echo hazard the enrichment fence exists to bound. Its
/// Dart site is Object.toString(), which by convention must not throw, so it
/// has no throw to enrich in the first place.
///
/// @param config  Pointer to a valid z_owned_config_t.
/// @param out     Pointer to an uninitialized z_owned_string_t to fill.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_config_to_string(const z_owned_config_t* config,
                                          z_owned_string_t* out);
/// Declares a key expression on the session, returning an owned handle.
///
/// Canon reduces the key expression to a numerical id in the session's
/// routing tables, which saves bandwidth when the expression is passed
/// between Zenoh entities. The input is LOANED, not consumed. The out-param
/// is written on EVERY path -- a gravestone on failure -- so a caller must
/// check the return code before wrapping it.
///
/// @param session       Const pointer to a loaned (live) session.
/// @param declared_out  Pointer to an uninitialized z_owned_keyexpr_t.
/// @param key_expr      Const pointer to the loaned key expression to declare.
/// @return 0 on success, Z_EGENERIC (-128) on failure.
FFI_PLUGIN_EXPORT int zd_declare_keyexpr(const z_loaned_session_t* session,
                                         z_owned_keyexpr_t* declared_out,
                                         const z_loaned_keyexpr_t* key_expr);
/// Declares a background subscriber on the given key expression.
///
/// Unlike a regular subscriber, a background subscriber has no handle --
/// it lives until the session is closed. Samples are posted to the Dart
/// native port. When the session closes and the background subscriber is
/// dropped internally by zenoh-c, a null sentinel is posted to signal
/// stream completion.
///
/// @param session   Const pointer to a loaned session.
/// @param key_expr  Const pointer to the loaned key expression. Already
///                  validated -- the Dart side constructs and validates it,
///                  so a declared key expression drives the declaration
///                  without a string round-trip.
/// @param dart_port The Dart native port to post samples to.
/// @return 0 on success, negative on failure.
/// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
///                        this declaration accepts, or -1 to leave canon's
///                        default (ANY).
FFI_PLUGIN_EXPORT int8_t zd_declare_background_subscriber(
    const z_loaned_session_t* session,
    const z_loaned_keyexpr_t* key_expr,
    int64_t dart_port,
    int allowed_origin,
    int retain_payload);
/// Declares a fire-and-forget background queryable.
///
/// No handle is returned; the queryable lives until the session is closed,
/// at which point its drop posts a null sentinel to the Dart port to signal
/// stream completion. Queries are posted to the Dart isolate via the port.
///
/// @param session   Const pointer to a loaned session (as uint8_t*).
/// @param key_expr  Const pointer to the loaned key expression, already
///                  validated Dart-side.
/// @param port      The Dart native port to post queries to.
/// @param complete  Whether the queryable is a complete data source (0/1).
/// @return 0 on success, negative on failure.
/// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
///                        this declaration accepts, or -1 to leave canon's
///                        default (ANY).
FFI_PLUGIN_EXPORT int8_t zd_declare_background_queryable(
    const uint8_t* session,
    const z_loaned_keyexpr_t* key_expr,
    int64_t port,
    int8_t complete,
    int allowed_origin);
/// Declares an advanced publisher on the given key expression.
///
/// @param enable_cache        Whether to enable the publisher-side cache.
/// @param cache_max_samples   Cache bound when the cache is enabled.
///                            **-1 means UNSPECIFIED**: canon's own default
///                            (`ze_advanced_publisher_cache_options_default`,
///                            currently 1) is left untouched. Any value >= 0 is
///                            assigned verbatim, zero included -- canon's zero
///                            carries NO unlimited semantics (measured), so
///                            there is no in-band value to misread. Ignored
///                            entirely when `enable_cache` is false.
/// @return 0 on success; canon's own negative code on a canon failure;
///         ZD_DECLARE_ECAPACITY (10) when `cache_max_samples` is outside the
///         representable domain (< -1, or > SIZE_MAX on ILP32) -- rejected
///         before anything is declared, so nothing ran.
FFI_PLUGIN_EXPORT int zd_declare_advanced_publisher(
    const z_loaned_session_t* session,
    ze_owned_advanced_publisher_t* publisher,
    const z_loaned_keyexpr_t* keyexpr,
    bool enable_cache,
    int64_t cache_max_samples,
    bool publisher_detection,
    bool sample_miss_detection,
    int heartbeat_mode,
    uint64_t heartbeat_period_ms);
/// Declares an advanced subscriber on the given key expression.
FFI_PLUGIN_EXPORT int zd_declare_advanced_subscriber(
    const z_loaned_session_t* session,
    ze_owned_advanced_subscriber_t* subscriber,
    const z_loaned_keyexpr_t* keyexpr,
    int64_t dart_port,
    bool history,
    bool history_detect_late_publishers,
    bool recovery,
    bool recovery_last_sample_miss_detection,
    uint64_t recovery_periodic_queries_period_ms,
    bool subscriber_detection,
    int retain_payload);