package/lib/src/bindings.dart


  /// Serializes the whole configuration to a JSON string.
  ///
  /// Loans the config internally and wraps zc_config_to_string(), filling the
  /// caller-allocated z_owned_string_t. The rc is checked (canon/cpp leaves it
  /// unchecked).
  ///
  /// ⛔ NOT detail-carrying, deliberately. It was wired to the deleted capture
  /// and nothing ever read it. Promoting it to a detail-carrying entry would
  /// widen the enrichment surface to a call whose input is the WHOLE RENDERED
  /// CONFIG -- the value-echo hazard the enrichment fence exists to bound. Its
  /// Dart site is Object.toString(), which by convention must not throw, so it
  /// has no throw to enrich in the first place.
  ///
  /// @param config  Pointer to a valid z_owned_config_t.
  /// @param out     Pointer to an uninitialized z_owned_string_t to fill.
  /// @return 0 on success, negative on failure.
  int zd_config_to_string(
    ffi.Pointer<ffi.Opaque> config,
    ffi.Pointer<ffi.Opaque> out,
  ) {
    return _zd_config_to_string(
      config,
      out,
    );
  }

  late final _zd_config_to_stringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
        >
      >('zd_config_to_string');
  late final _zd_config_to_string = _zd_config_to_stringPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
      >();

  /// Declares an advanced publisher on the given key expression.
  ///
  /// @param enable_cache        Whether to enable the publisher-side cache.
  /// @param cache_max_samples   Cache bound when the cache is enabled.
  /// **-1 means UNSPECIFIED**: canon's own default
  /// (`ze_advanced_publisher_cache_options_default`,
  /// currently 1) is left untouched. Any value >= 0 is
  /// assigned verbatim, zero included -- canon's zero
  /// carries NO unlimited semantics (measured), so
  /// there is no in-band value to misread. Ignored
  /// entirely when `enable_cache` is false.
  /// @return 0 on success; canon's own negative code on a canon failure;
  /// ZD_DECLARE_ECAPACITY (10) when `cache_max_samples` is outside the
  /// representable domain (< -1, or > SIZE_MAX on ILP32) -- rejected
  /// before anything is declared, so nothing ran.
  int zd_declare_advanced_publisher(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> publisher,
    ffi.Pointer<ffi.Opaque> keyexpr,
    bool enable_cache,
    int cache_max_samples,
    bool publisher_detection,
    bool sample_miss_detection,
    int heartbeat_mode,
    int heartbeat_period_ms,
  ) {
    return _zd_declare_advanced_publisher(
      session,
      publisher,
      keyexpr,
      enable_cache,
      cache_max_samples,
      publisher_detection,
      sample_miss_detection,
      heartbeat_mode,
      heartbeat_period_ms,
    );
  }

  late final _zd_declare_advanced_publisherPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Bool,
            ffi.Int64,
            ffi.Bool,
            ffi.Bool,
            ffi.Int,
            ffi.Uint64,
          )
        >
      >('zd_declare_advanced_publisher');
  late final _zd_declare_advanced_publisher = _zd_declare_advanced_publisherPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          bool,
          int,
          bool,
          bool,
          int,
          int,
        )
      >();

  /// Declares an advanced subscriber on the given key expression.
  int zd_declare_advanced_subscriber(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> subscriber,
    ffi.Pointer<ffi.Opaque> keyexpr,
    int dart_port,
    bool history,
    bool history_detect_late_publishers,
    bool recovery,
    bool recovery_last_sample_miss_detection,
    int recovery_periodic_queries_period_ms,
    bool subscriber_detection,
    int retain_payload,
  ) {
    return _zd_declare_advanced_subscriber(
      session,
      subscriber,
      keyexpr,
      dart_port,
      history,
      history_detect_late_publishers,
      recovery,
      recovery_last_sample_miss_detection,
      recovery_periodic_queries_period_ms,
      subscriber_detection,
      retain_payload,
    );
  }

  late final _zd_declare_advanced_subscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int64,
            ffi.Bool,
            ffi.Bool,
            ffi.Bool,
            ffi.Bool,
            ffi.Uint64,
            ffi.Bool,
            ffi.Int,
          )
        >
      >('zd_declare_advanced_subscriber');
  late final _zd_declare_advanced_subscriber =
      _zd_declare_advanced_subscriberPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Opaque>,
              ffi.Pointer<ffi.Opaque>,
              ffi.Pointer<ffi.Opaque>,
              int,
              bool,
              bool,
              bool,
              bool,
              int,
              bool,
              int,
            )
          >();

  /// Declares a fire-and-forget background queryable.
  ///
  /// No handle is returned; the queryable lives until the session is closed,
  /// at which point its drop posts a null sentinel to the Dart port to signal
  /// stream completion. Queries are posted to the Dart isolate via the port.
  ///
  /// @param session   Const pointer to a loaned session (as uint8_t*).
  /// @param key_expr  Const pointer to the loaned key expression, already
  /// validated Dart-side.
  /// @param port      The Dart native port to post queries to.
  /// @param complete  Whether the queryable is a complete data source (0/1).
  /// @return 0 on success, negative on failure.
  /// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
  /// this declaration accepts, or -1 to leave canon's
  /// default (ANY).
  int zd_declare_background_queryable(
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Opaque> key_expr,
    int port,
    int complete,
    int allowed_origin,
  ) {
    return _zd_declare_background_queryable(
      session,
      key_expr,
      port,
      complete,
      allowed_origin,
    );
  }

  late final _zd_declare_background_queryablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int64,
            ffi.Int8,
            ffi.Int,
          )
        >
      >('zd_declare_background_queryable');
  late final _zd_declare_background_queryable =
      _zd_declare_background_queryablePtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Opaque>,
              int,
              int,
              int,
            )
          >();

  /// Declares a background subscriber on the given key expression.
  ///
  /// Unlike a regular subscriber, a background subscriber has no handle --
  /// it lives until the session is closed. Samples are posted to the Dart
  /// native port. When the session closes and the background subscriber is
  /// dropped internally by zenoh-c, a null sentinel is posted to signal
  /// stream completion.
  ///
  /// @param session   Const pointer to a loaned session.
  /// @param key_expr  Const pointer to the loaned key expression. Already
  /// validated -- the Dart side constructs and validates it,
  /// so a declared key expression drives the declaration
  /// without a string round-trip.
  /// @param dart_port The Dart native port to post samples to.
  /// @return 0 on success, negative on failure.
  /// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
  /// this declaration accepts, or -1 to leave canon's
  /// default (ANY).
  int zd_declare_background_subscriber(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> key_expr,
    int dart_port,
    int allowed_origin,
    int retain_payload,
  ) {
    return _zd_declare_background_subscriber(
      session,
      key_expr,
      dart_port,
      allowed_origin,
      retain_payload,
    );
  }

  late final _zd_declare_background_subscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int64,
            ffi.Int,
            ffi.Int,
          )
        >
      >('zd_declare_background_subscriber');
  late final _zd_declare_background_subscriber =
      _zd_declare_background_subscriberPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Opaque>,
              ffi.Pointer<ffi.Opaque>,
              int,
              int,
              int,
            )
          >();

  /// Declares a key expression on the session, returning an owned handle.
  ///
  /// Canon reduces the key expression to a numerical id in the session's
  /// routing tables, which saves bandwidth when the expression is passed
  /// between Zenoh entities. The input is LOANED, not consumed. The out-param
  /// is written on EVERY path -- a gravestone on failure -- so a caller must
  /// check the return code before wrapping it.
  ///
  /// @param session       Const pointer to a loaned (live) session.
  /// @param declared_out  Pointer to an uninitialized z_owned_keyexpr_t.
  /// @param key_expr      Const pointer to the loaned key expression to declare.
  /// @return 0 on success, Z_EGENERIC (-128) on failure.
  int zd_declare_keyexpr(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<z_owned_keyexpr_t> declared_out,
    ffi.Pointer<ffi.Opaque> key_expr,
  ) {
    return _zd_declare_keyexpr(
      session,
      declared_out,
      key_expr,
    );
  }

  late final _zd_declare_keyexprPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<z_owned_keyexpr_t>,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_declare_keyexpr');
  late final _zd_declare_keyexpr = _zd_declare_keyexprPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<z_owned_keyexpr_t>,
          ffi.Pointer<ffi.Opaque>,
        )
      >();
